[gd_scene load_steps=10 format=3 uid="uid://b7imrqewnp7hg"]

[ext_resource type="Script" path="res://scripts/rigid_body_player.gd" id="1_btjq7"]
[ext_resource type="Texture2D" uid="uid://cm0i7txdgsal5" path="res://assets/character/atlas.png" id="2_7btjw"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4yvn6"]
radius = 21.0
height = 66.0

[sub_resource type="Animation" id="Animation_c7370"]
resource_name = "Run"
length = 0.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(10, 1), Vector2i(11, 1), Vector2i(12, 1), Vector2i(13, 1), Vector2i(0, 2)]
}

[sub_resource type="Animation" id="Animation_yujel"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(9, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(12, -3)]
}

[sub_resource type="Animation" id="Animation_2wisk"]
resource_name = "Jump"
step = 0.1

[sub_resource type="Animation" id="Animation_2b3w3"]
resource_name = "Down"
length = 0.3
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(6, 1), Vector2i(7, 1)]
}

[sub_resource type="Animation" id="Animation_flbl7"]
resource_name = "Idle"
length = 0.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(13, 0), Vector2i(3, 1), Vector2i(9, 1), Vector2i(10, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(12, -3), Vector2(4, -2), Vector2(5, -2.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1htx0"]
_data = {
"Crouch": SubResource("Animation_2b3w3"),
"Idle": SubResource("Animation_flbl7"),
"Jump": SubResource("Animation_2wisk"),
"RESET": SubResource("Animation_yujel"),
"Run": SubResource("Animation_c7370")
}

[node name="RigidPlayer" type="RigidBody2D"]
lock_rotation = true
script = ExtResource("1_btjq7")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(12, -3)
scale = Vector2(2, 2)
texture = ExtResource("2_7btjw")
hframes = 14
vframes = 4
frame = 23

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_4yvn6")

[node name="left_ray_foot" type="RayCast2D" parent="."]
position = Vector2(-20, 32)
target_position = Vector2(0, 8)

[node name="right_ray_foot" type="RayCast2D" parent="."]
position = Vector2(20, 32)
target_position = Vector2(0, 8)

[node name="left_ray_wall" type="RayCast2D" parent="."]
position = Vector2(-19, 11)
target_position = Vector2(-17, 0)

[node name="right_ray_wall" type="RayCast2D" parent="."]
position = Vector2(19, 10)
target_position = Vector2(17, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1htx0")
}
